--- a/my-app/src/pages/about/about.scss
+++ b/my-app/src/pages/about/about.scss
@@ -1,29 +1,30 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
-#about {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-#About-A2 {
-  .article__sections {
-    justify-content: space-between;
-    .section {
-      width: 30%;
+@include desktop-layout {
+  #about {
+    flex-direction: column;
+  }
+  
+  #About-A2 {
+    .article__sections {
+      display: flex;
+      justify-content: space-between;
+      .section {
+        width: 30%;
+      }
     }
   }
-}
-
-#About-A2S1 {
-  margin-top: 0;
-}
-
-#About-A2S2 {
-  margin-top: 250px;
-}
-
-#About-A2S3 {
-  margin-top: 500px;
+  
+  #About-A2S1 {
+    margin-top: 0;
+  }
+  
+  #About-A2S2 {
+    margin-top: 250px;
+  }
+  
+  #About-A2S3 {
+    margin-top: 500px;
+  }
 }
