--- a/my-app/src/components/article/article.scss
+++ b/my-app/src/components/article/article.scss
@@ -19,11 +19,45 @@
     display: flex;
     flex-direction: column;
     text-align: justify;
+    box-sizing: border-box;
   }
 
-  &__articles {
-    .article{
-      margin-bottom: 0;
+  &__images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    &__image {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+
+      &__container {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        overflow: hidden;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+
+        & img {
+          display: block;
+          width: 100%;
+          transition: 0.3s;
+
+          &:hover {
+            transform: scale(1.1);
+          }
+        }
+      }
+
+      & span {
+        font-size: 10px;
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
+      }
     }
   }
 }
@@ -33,59 +67,36 @@
     margin-top: 100px;
     background-color: rgb(217, 217, 217);
     border-radius: 20px;
-    padding: 50px;
 
     &__container {
       flex-direction: row;
       justify-content: space-around;
     }
-    &__textarea__text {
-      margin-bottom: 50px;
+
+    &__textarea {
+      padding: 30px;
+
+      &[data-images="0"] {
+        width: 100%;
+      }
+
+      &[data-images="1"] {
+        width: 50%;
+      }
+
+      &__text {
+        margin-bottom: 50px;
+      }
     }
 
     &__title {
       text-align: center;
       margin-bottom: 30px;
-      padding-bottom: 15px;
+      padding: 40px 0 15px 0;
     }
 
     &__images {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
       width: 40%;
-
-      &__image {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-
-        &__container {
-          display: flex;
-          justify-content: center;
-          width: 100%;
-          overflow: hidden;
-
-          & img {
-            display: block;
-            width: 100%;
-            transition: 0.3s;
-  
-            &:hover {
-              transform: scale(1.1);
-            }
-          }
-        }
-
-        & span {
-          font-size: 10px;
-          width: 100%;
-          text-align: center;
-          margin-top: 20px;
-        }
-      }
     }
 
     &__articles {
@@ -122,56 +133,30 @@
     }
   }
 }
+
 @include mobile-layout {
   .article {
-    margin-top: 20px;
-    padding: 20px;
+    margin-top: 30px;
+    padding-bottom: 30px;
 
     &__container {
       flex-direction: column;
+      align-items: center;
     }
 
     &__title {
       text-align: center;
-      margin-bottom: 15px;
+      margin-bottom: 30px;
       padding-bottom: 5px;
     }
 
     &__textarea {
       width: 100%;
+      padding: 0 50px 20px 50px;
     }
 
     &__images {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
       width: 80%;
-
-      &__image {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-
-        &__container {
-          display: flex;
-          justify-content: center;
-          width: 100%;
-          overflow: hidden;
-
-          & img {
-            width: 100%;
-          }
-        }
-
-        & span {
-          font-size: 10px;
-          width: 100%;
-          text-align: center;
-          margin-top: 20px;
-        }
-      }
     }
 
     &__articles {
