--- a/my-app/src/components/navigation/navigation.scss
+++ b/my-app/src/components/navigation/navigation.scss
@@ -310,7 +310,8 @@
       width: 100%;
       height: 0;
       overflow: hidden;
-      background: $primary-color;
+      background: $dark-color;
+      background: radial-gradient(circle, $dark-color 0%, $primary-color 100%); 
 
       &__nav {
         flex-direction: column;
