--- a/my-app/src/pages/404/page_not_found.scss
+++ b/my-app/src/pages/404/page_not_found.scss
@@ -24,6 +24,7 @@ $body: "Lato", sans-serif;
       padding: $desktop-header-radius;
       justify-content: center;
       align-items: center;
+      text-align: center;
       height: 300px;
 
       &__title {
