--- a/my-app/src/pages/home/index.scss
+++ b/my-app/src/pages/home/index.scss
@@ -23,6 +23,8 @@
         flex-direction: column;
 
         &__card {
+          box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+          
           &:hover {
             cursor: pointer;
 
