--- a/my-app/src/pages/about/about.scss
+++ b/my-app/src/pages/about/about.scss
@@ -7,11 +7,22 @@
   }
   
   #About-A2 {
-    .article__sections {
-      display: flex;
-      justify-content: space-between;
-      .section {
-        width: 30%;
+    .article{
+      &__textarea{
+        display: none;
+      }
+
+      &__sections div {
+        display: flex;
+        justify-content: space-around;
+
+        .section {
+          width: 30%;
+
+          &__textarea {
+            justify-content: flex-start;
+          }
+        }
       }
     }
   }
