--- a/my-app/src/components/article/article.scss
+++ b/my-app/src/components/article/article.scss
@@ -10,8 +10,6 @@
   }
 
   &__title {
-    font-family: $titles;
-    border-bottom: solid 1px $accent-color;
     width: 100%;
   }
 
@@ -93,6 +91,7 @@
       text-align: center;
       margin-bottom: 30px;
       padding: 40px 0 15px 0;
+      border-bottom: solid 1px $accent-color;
     }
 
     &__images {
@@ -147,12 +146,12 @@
     &__title {
       text-align: center;
       margin-bottom: 30px;
-      padding-bottom: 5px;
+      background-color: $light-color;
     }
 
     &__textarea {
       width: 100%;
-      padding: 0 50px 20px 50px;
+      margin-bottom: 10px;
     }
 
     &__images {
