--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -178,6 +178,16 @@ main {
   align-items: center;
 }
 
+.titles {
+  font-family: $titles;
+  color: $color-black;
+}
+
+.s-text {
+  font-size: 60%;
+  text-align: justify;
+}
+
 @include large-desktop-layout {
   main {
     .container {
@@ -208,23 +218,18 @@ main {
     padding-bottom: 100px;
   }
 
-  .titles {
-    font-family: $titles;
-    color: $color-black;
-  }
-
   h1 {
-    @extend .titles;
+    font-family: $titles;
     font-size: 50px;
   }
 
   h2 {
-    @extend .titles;
+    font-family: $titles;
     font-size: 40px;
   }
 
   h3 {
-    @extend .titles;
+    font-family: $titles;
     font-size: 30px;
   }
 
@@ -235,6 +240,49 @@ main {
     font-family: $body;
     font-size: 20px;
     line-height: 1.3;
+    color: $color-black;
+  }
+}
+
+@include mobile-layout {
+  main {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .container {
+    padding: 0 10px 20px 10px;
+  }
+
+  .titles {
+    font-family: $titles;
+    color: $color-black;
+  }
+
+  h1 {
+    font-family: $titles;
+    font-size: 20px;
+  }
+
+  h2 {
+    font-family: $titles;
+    font-size: 30px;
+  }
+
+  h3 {
+    font-family: $titles;
+    font-size: 20px;
+    text-decoration: $accent-color underline;
+  }
+
+  div,
+  p,
+  span,
+  a {
+    font-family: $body;
+    font-size: 17px;
+    line-height: 1;
     color: $color-black;
   }
 }
