--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $primary-color;
+  background: linear-gradient(180deg, $dark-color 0%, $primary-color 60%);
   width: 100%;
   z-index: 1;
   box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.2);
