--- a/my-app/src/components/section/section.scss
+++ b/my-app/src/components/section/section.scss
@@ -24,6 +24,10 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      
+      &:hover {
+        cursor: pointer;
+      }
 
       &__image {
         display: flex;
