--- a/my-app/src/pages/history/history.scss
+++ b/my-app/src/pages/history/history.scss
@@ -2,65 +2,162 @@
 @import "../../sass-utils/variables.scss";
 
 #history {
-  .article {
-  &__section {
-    display: flex;
-    justify-content: space-between;
-
-    &__textarea {
-      display: flex;
-      flex-direction: column;
-      width: 60%;
-
-      &__title {
-        text-align: center;
-        font-family: $titles;
-        margin-bottom: 30px;
-        padding-bottom: 15px;
-        border-bottom: solid 1px $accent-color;
-      }
-
-      &__paragraph {
-        text-align: justify;
-        padding: 5px;
-      }
+  .parent {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  .input-container {
+    justify-content: space-around;
+    align-items: center;
+    width: $parentWidth;
+    height: 100px;
+    max-width: $parentMaxWidth;
+    position: relative;
+    z-index: 0;
+  }
+  .input {
+    width: $dotWidth;
+    height: $dotWidth;
+    background-color: $active;
+    position: relative;
+    border-radius: 50%;
+    &:hover {
+      cursor: pointer;
     }
-
-    &__image {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 30%;
-
-      &__container {
-        display: flex;
-        position: relative;
-        justify-content: center;
-        align-items: center;
-        background-color: transparent;
-        border: none;
-        height: 200px;
-        width: 300px;
-        box-shadow: 10px 10px 30px -4px rgba(0, 0, 0, 0.75);
-        border: solid 1px $color-black;
-        border-radius: 5px;
-        overflow: hidden;
-        cursor: pointer;
-
-        &__picture {
-          width: 120%;
-          height: 120%;
+    &::before,
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      z-index: -1;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: $active;
+      width: calc($parentWidth / $numDots);
+      height: 5px;
+      max-width: calc($parentMaxWidth / $numDots);
+    }
+    &::before {
+      left: calc(calc(-1 * $parentWidth / $numDots) + calc($dotWidth / 2));
+    }
+    &::after {
+      right: calc(calc(-1 * $parentWidth / $numDots) + calc($dotWidth / 2));
+    }
+    &.active {
+      background-color: $active;
+      &::before {
+        background-color: $active;
+      }
+      &::after {
+        background-color: $inactive;
+      }
+      span {
+        font-weight: 700;
+        &::before {
+          font-size: 15px;
+        }
+        &::after {
+          font-size: 18px;
         }
       }
     }
-
-    &:nth-child(odd) {
-      flex-direction: row;
+    &.active ~ .input {
+      &,
+      &::before,
+      &::after {
+        background-color: $inactive;
+      }
     }
-
-    &:nth-child(even) {
-      flex-direction: row-reverse;
+    span {
+      width: 1px;
+      height: 1px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      visibility: hidden;
+      &::before,
+      &::after {
+        visibility: visible;
+        position: absolute;
+        left: 50%;
+      }
+      &::after {
+        content: attr(data-year);
+        top: -50px;
+        transform: translateX(-50%);
+        font-size: 14px;
+      }
     }
   }
-}
+  .description-container {
+    flex: 1 1 auto;
+    margin-bottom: 100px;
+
+    .article {
+      display: none;
+      position: relative;
+
+      .section {
+        &__textarea {
+          &__title {
+            border-bottom: solid 3px $accent-color;
+          }
+
+          &__paragraph {
+            display: none;
+          }
+        }
+      }
+
+      &.active {
+        display: block;
+      }
+
+      .toggle-btn {
+        position: absolute;
+        bottom: 15px;
+        right: 15px;
+        color: #ffffff;
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 5px;
+        background: rgb(204, 12, 79);
+
+        &__text {
+          font-size: 15px;
+          font-weight: 700;
+        }
+
+        & .active {
+          &__arrow__icon {
+            transform: rotate(180deg);
+          }
+        }
+      }
+    }
+  }
+  .gallery {
+    align-items: center;
+    width: 100%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+    &__frame {
+      flex: 0 1 260px;
+      position: relative;
+      box-shadow: 10px 10px 30px -4px rgba(0, 0, 0, 0.75);
+      border-radius: 40px;
+      cursor: pointer;
+      overflow: hidden;
+      margin: 20px 0 20px 0;
+
+      &__picture {
+        width: 100%;
+      }
+    }
+  }
 }
