--- a/my-app/src/sass-utils/variables.scss
+++ b/my-app/src/sass-utils/variables.scss
@@ -10,7 +10,14 @@ $desktop-header-radius: 75px;
 $mobile-header-radius: 50px;
 $tablet-header-radius: 50px;
 
-
 $body: Arial, Helvetica, sans-serif;
 $titles: "Fjord One", serif;
 $special: "Abril Fatface", serif;
+
+$numDots: 3;
+$parentWidthBase: calc(1 / $numDots);
+$parentWidth: $parentWidthBase * 100vw;
+$parentMaxWidth: 1224px;
+$dotWidth: 25px;
+$active: $dark-color;
+$inactive: $light-color;
