--- a/my-app/src/pages/history/history.scss
+++ b/my-app/src/pages/history/history.scss
@@ -1,6 +1,18 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
+@keyframes show {
+  0% {
+    height: 0;
+  }
+  50% {
+    height : 100px;
+  }
+  100% {
+    height: auto;
+  }
+}
+
 #history {
   .parent {
     flex-direction: column;
@@ -100,43 +112,58 @@
     .article {
       display: none;
       position: relative;
+      border-radius: 5rem;
+      overflow: hidden;
 
       .section {
         &__textarea {
           &__title {
             border-bottom: solid 3px $accent-color;
+            background: linear-gradient(180deg, $dark-color 0%, $primary-color 60%);
           }
 
           &__paragraph {
-            display: none;
+            height: 0;
+            overflow: hidden;
+            z-index: -1;
+            padding: 0 5rem 0 5rem;
+
+            &.show {
+              animation: show 0.7s ease both;
+            }
+          }
+
+          .toggle-btn {
+            position: absolute;
+            justify-content: space-evenly;
+            align-items: center;
+            bottom: 15px;
+            right: 50%;
+            transform: translateX(50%);
+            color: $color-white;
+            cursor: pointer;
+            width: 115px;
+            height: 40px;
+            border-radius: 5px;
+            background: $dark-color;
+            font-size: 15px;
+            font-weight: 700;
+
+            &__arrow {
+              color: $color-white;
+            }
+
+            &.active {
+              .toggle-btn__arrow {
+                transform: rotate(180deg);
+              }
+            }
           }
         }
       }
 
       &.active {
         display: block;
-      }
-
-      .toggle-btn {
-        position: absolute;
-        bottom: 15px;
-        right: 15px;
-        color: #ffffff;
-        cursor: pointer;
-        padding: 10px;
-        border-radius: 5px;
-        background: rgb(204, 12, 79);
-
-        &__text {
-          font-size: 15px;
-          font-weight: 700;
-        }
-
-        & .active {
-          &__arrow__icon {
-            transform: rotate(180deg);
-          }
-        }
       }
     }
   }
