--- a/my-app/src/components/article/article.scss
+++ b/my-app/src/components/article/article.scss
@@ -150,6 +150,7 @@
     &__title {
       text-align: center;
       margin-bottom: 30px;
+      padding: 5px 0 5px 0;
       background-color: $light-color;
     }
 
