--- a/my-app/src/components/navigation/navigation.scss
+++ b/my-app/src/components/navigation/navigation.scss
@@ -322,8 +322,10 @@
           justify-content: center;
 
           & a {
-            color: $color-black;
             z-index: 2;
+            div {
+              color: $color-white;
+            }
           }
 
           &__submenu {
