--- a/my-app/src/pages/history/history.scss
+++ b/my-app/src/pages/history/history.scss
@@ -51,12 +51,6 @@
       }
       span {
         font-weight: 700;
-        &::before {
-          font-size: 15px;
-        }
-        &::after {
-          font-size: 18px;
-        }
       }
     }
     &.active ~ .input {
@@ -81,7 +75,6 @@
       }
       &::after {
         content: attr(data-year);
-        font-size: 14px;
       }
     }
   }
@@ -101,6 +94,7 @@
           &__title {
             border-bottom: solid 3px $accent-color;
             background: linear-gradient(180deg, $dark-color 0%, $primary-color 60%);
+            flex-direction: column;
           }
 
           &__paragraph {
@@ -179,12 +173,23 @@
       &::after {
         right: calc(calc(-1 * $parentWidth / $numDots) + calc($dotWidth / 2));
       }
+      &.active {
+        span {
+          &::before {
+            font-size: 15px;
+          }
+          &::after {
+            font-size: 18px;
+          }
+        }
+      }
       span {
         &::before,
         &::after {
           left: 50%;
         }
         &::after {
+          font-size: 14px;
           top: -50px;
           transform: translateX(-50%);
         }
@@ -275,19 +280,27 @@
       &::after {
         bottom: calc(calc(-1 * $parentHeight / $numDots) + calc($dotWidth / 2));
       }
+      &.active {
+        span {
+          &::after {
+            font-size: 13px;
+          }
+        }
+      }
       span {
         &::before,
         &::after {
           top: 50%;
         }
         &::after {
-          right: -55px;
+          right: -45px;
           transform: translateY(-50%);
+          font-size: 10px;
         }
       }
     }
     .description-container {
-      margin-bottom: 50px;
+      margin-bottom: 30px;
       max-width: 80%;
 
       .article {
@@ -295,13 +308,34 @@
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
         
         .section {
+          padding-bottom: 10px;
           &__textarea {
+
             &__title {
               text-align: center;
-              & h2, h3, h4 {
-                color: $color-white;
-                text-decoration: none;
+              padding: 0 30px 0 30px;
+              height: 60px;
 
+              & h2, h3, h4 {
+                text-decoration: none;
+              }
+
+              & h2 {
+                font-size: 20px;
+                position: absolute;
+                top: 63px;
+                left: 50%;
+                transform: translateX(-50%);
+                color: $accent-color;
+                width: 100%;
+              }
+              & h3 {
+                font-size: 15px;
+                color: $color-white;
+              }
+              & h4 {
+                font-size: 10px;
+                color: $color-white;
               }
             }
 
@@ -314,19 +348,13 @@
             }
 
             .toggle-btn {
-              position: absolute;
-              justify-content: space-evenly;
-              align-items: center;
-              bottom: 15px;
+              bottom: 5px;
               right: 50%;
               transform: translateX(50%);
-              color: $color-white;
-              cursor: pointer;
-              width: 115px;
-              height: 40px;
-              border-radius: 5px;
-              background: $dark-color;
-              font-size: 15px;
+              width: 105px;
+              height: 35px;
+              border-radius: 25px;
+              font-size: 13px;
               font-weight: 700;
             }
           }
