--- a/my-app/src/pages/history/history.scss
+++ b/my-app/src/pages/history/history.scss
@@ -112,8 +112,16 @@
             justify-content: space-evenly;
             align-items: center;
             color: $color-white;
+            border-radius: 25px;
             cursor: pointer;
-            background: $dark-color;
+            background-image: linear-gradient(131deg, $dark-color, $primary-color, $light-color);
+            background-size: 300% 100%;
+            transition: all 0.3s ease-in-out;
+
+            &:hover:enabled {
+              box-shadow: 0 0.5em 0.5em -0.4em $light-color;
+              background-size: 100% 100%;
+            }
           }
         }
       }
@@ -206,10 +214,6 @@
 
             &__paragraph {
               padding: 0 5rem 0 5rem;
-
-              &.show {
-                animation: show 0.7s ease both;
-              }
             }
 
             .toggle-btn {
@@ -218,7 +222,6 @@
               transform: translateX(50%);
               width: 115px;
               height: 40px;
-              border-radius: 5px;
               font-size: 15px;
               font-weight: 700;
             }
@@ -343,7 +346,7 @@
               padding: 0 0.5rem 0 0.5rem;
 
               &.show {
-                animation: show 0.7s ease both;
+                padding-top: 20px;
               }
             }
 
@@ -353,7 +356,6 @@
               transform: translateX(50%);
               width: 105px;
               height: 35px;
-              border-radius: 25px;
               font-size: 13px;
               font-weight: 700;
             }
