--- a/my-app/src/pages/home/index.scss
+++ b/my-app/src/pages/home/index.scss
@@ -104,6 +104,31 @@
         }
       }
     }
+    .article {
+      a {
+        text-decoration: none;
+
+        .news {
+          border-radius: 100px 0 0 100px;
+          background-color: red;
+          justify-content: space-between;
+
+          &__image {
+            height: 200px;
+            width: 200px;
+            border-radius: 50%;
+            overflow: hidden;
+            background-position: center;
+          }
+
+          &__text {
+            max-height: 200px;
+            overflow: hidden;
+            width: calc(100% - 200px - 30px)
+          }
+        }
+      }
+    }
   }
 }
 
@@ -114,7 +139,6 @@
 }
 
 @include mobile-layout {
-
   #welcome {
     padding: $mobile-header-radius 10px 10px 10px;
     font-size: 1.5rem;
