--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -111,10 +111,6 @@ section {
   display: block;
 }
 
-body {
-  line-height: 1;
-}
-
 ol,
 ul {
   list-style: none;
@@ -239,8 +235,11 @@ main {
   a {
     font-family: $body;
     font-size: 20px;
-    line-height: 1.3;
     color: $color-black;
+  }
+
+  p {
+    line-height: 1.3;
   }
 }
 
