--- a/my-app/src/pages/join/join.scss
+++ b/my-app/src/pages/join/join.scss
@@ -8,29 +8,154 @@
     align-items: center;
 
     &__image {
-      position: relative;
-      width: 70%;
+      flex-wrap: wrap;
 
-      &__title {
-        position: absolute;
-        width:100%;
-        text-align: center;
-        top: 40%;
+      &__wrapper {
+        width: 70%;
 
-        span {
-            font-family: $titles;
-            color: $color-black;
-            font-size: 40px;
+        &__box {
+          position: relative;
+          border-radius: 4px;
+          overflow: hidden;
+          box-shadow: 0 1.4px 1.7px rgba(0, 0, 0, 0.017), 0 3.3px 4px rgba(0, 0, 0, 0.024),
+            0 6.3px 7.5px rgba(0, 0, 0, 0.03), 0 11.2px 13.4px rgba(0, 0, 0, 0.036),
+            0 20.9px 25.1px rgba(0, 0, 0, 0.043), 0 50px 60px rgba(0, 0, 0, 0.06);
+
+          .hide {
+            opacity: 0;
+          }
+
+          &__frame {
+            position: absolute;
+            border: 1px solid #fff;
+            z-index: 2;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+
+          h2,
+          span {
+            position: absolute;
+            color: #fff;
+            z-index: 2;
+            width: 100%;
+            transition: opacity 0.2s, transform 0.3s;
+          }
+
+          h2 {
+            font-weight: 500;
+            margin-bottom: 0;
+            letter-spacing: 1px;
+          }
+
+          span {
+            bottom: 0;
+            font-size: 30px;
+            letter-spacing: 1px;
+          }
+
+          &:hover {
+            transition: all 0.3s ease-in-out;
+          }
+
+          &:hover:before {
+            transition: all 0.3s ease-in-out;
+          }
+
+          img {
+            position: relative;
+            width: 100%;
+            z-index: 1;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+              transition: all 0.3s ease-in-out;
+            }
+
+            &:after {
+              content: "";
+              position: absolute;
+              background-color: rgba(0, 0, 0, 0.6);
+              width: 100%;
+              top: 0;
+              left: 0;
+              opacity: 0;
+            }
+
+            &:hover {
+              transition: all 0.3s ease-in-out;
+            }
+          }
         }
-      }
 
-      img {
-        width: 100%;
+        .blury-card {
+          .join__image__wrapper__box__frame {
+            width: calc(100% - 40px);
+            height: calc(100% - 40px);
+            opacity: 0;
+            transition: all 0.3s ease-in-out;
+          }
+
+          h2,
+          span {
+            text-align: center;
+            top: 50%;
+            transform: translatey(-50%);
+            margin: 0;
+            z-index: 3;
+          }
+
+          span {
+            transform: translatey(30px);
+            letter-spacing: 3px;
+          }
+
+          h2 {
+            transform: translatey(-30px);
+          }
+
+          &:before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #008e6b;
+            z-index: 1;
+            left: 0;
+            opacity: 0;
+            transition: all 0.3s ease-in-out;
+          }
+
+          img {
+            z-index: 2;
+          }
+
+          &:hover {
+            .join__image__wrapper__box__frame {
+              width: calc(100% - 120px);
+              height: calc(100% - 120px);
+              opacity: 1;
+            }
+
+            img {
+              opacity: 0.7;
+            }
+
+            &:before {
+              opacity: 1;
+              transition: all 0.3s ease-in-out;
+            }
+          }
+        }
       }
     }
 
-    p {
-      text-align: justify;
+    &__text {
+      margin-top: 50px;
+      p {
+        text-align: justify;
+      }
     }
   }
 }
