--- a/my-app/src/pages/newsletter/newsletter.scss
+++ b/my-app/src/pages/newsletter/newsletter.scss
@@ -4,6 +4,7 @@
 #news {
   .btn {
     &--back {
+      margin-top: 50px;
       background-color: $light-color;
       border: 2px solid $dark-color;
       border-radius: 30px;
@@ -42,7 +43,7 @@
       margin: 25px 0 50px 0;
 
       &__text {
-        width: calc(1224px - 350px);
+        padding: 0 80px 0 20px ;
         flex-direction: column;
         justify-content: space-around;
 
@@ -57,8 +58,10 @@
       }
 
       &__image {
-        width: 300px;
         position: relative;
+        margin-left: 80px;
+        max-width: 300px;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 
         &img {
           width: 100%;
@@ -66,9 +69,12 @@
 
         &__caption {
           position: absolute;
+          max-width: 350px;
+          width: 100%;
+          left: 50%;
+          transform: translateX(-50%);
           bottom: 0;
           background-color: $light-color;
-          box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
         }
       }
     }
